<resources>
    <string name="app_name">smartBlanket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    //Navigation
    <string name="nav_header_title">Smart Blanket</string>
    <string name="nav_header_subtitle">blanketsmart@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tools">Tools</string>
    <string name="login">Login 🔓</string>
    <string name="setting">Setting</string>
    <string name="communicate">Communicate</string>
    //Supervisor addManage
    <string name="firstNamePatient">First Name</string>
    <string name="middleNamePatient">Middle Name</string>
    <string name="LastNamePatient">Sure Name</string>
    <string name="birthPatient">Date of Birth</string>
    <string name="statePatient">State</string>
    <string name="dirBedNumber">Bed No.</string>
    <string name="dirRoomNumber">in Room No.</string>
    <string name="confirmBtn">Confirm</string>
    <string name="cancelBtn">Cancel</string>
    <string name="add_patient">Add Patient</string>
    <string name="update_patient">Update Patient</string>
    <string name="remove_patient">Remove Patient</string>
    <string name="noPatient">No.</string>
    <string name="patient_name">Patient Name</string>
    <string name="status">Status</string>

    <string-array name="ManageOption">
        <item>Add</item>
        <item>Update</item>
        <item>Remove</item>
    </string-array>
    //Spinner Value
    <string-array name="BedNo">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="RoomNo">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>


    <string-array name="patientNameList">
        <item>Alex</item>
        <item>Adam</item>
        <item>Maria</item>
        <item>Aseel</item>
        <item>Tom</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_one_patient">OnePatientActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="ssnPatient">SSN</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome_to_smartblanket">Welcome to SmartBlanket</string>
    <string name="subTitle">please fill your department info</string>
    <string name="department_name">Department Name</string>
    <string name="numberOfBeds">Number of beds in each room</string>
    <string name="numberOfRooms">Number of rooms</string>
    <string name="finish">Finish</string>
    <string name="info_supervisor_subtitle">please fill your info</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="login_screen">Login 🏥</string>
    <string name="next">Next ►</string>
    <string name="registration_screen">Register 🔑</string>
    <string name="department">Department</string>
    <string name="number_of_room_s">Number Of Room(s)</string>
    <string name="number_of_bed_s_in_each_room">Number Of Bed(s) in each room</string>
    <string name="logout">Logout</string>
    <string name="txt_password_confirm">Please enter the password of the supervisor for this Department!</string>
    <string name="change_password">Change Password</string>
    <string name="history">History</string>
</resources>
