<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundedit"
    android:orientation="vertical"
    tools:context=".SetupActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_smartblanket"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="24dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subTitle"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="67dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/department_name" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="474dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/ccuRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="CCU" />

            <RadioButton
                android:id="@+id/emerRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Emergency" />

            <RadioButton
                android:id="@+id/icuRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ICU" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/numberOfRooms"
            android:layout_weight="1" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_room"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:theme="@style/MyEditText"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/MyErrorText">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:fontFamily="@font/century_gothic"
                android:hint="@string/number_of_room_s"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:text="4"
                android:theme="@style/MyEditText" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/numberOfBeds"
            android:layout_weight="1" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_bed"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:theme="@style/MyEditText"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/MyErrorText">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:fontFamily="@font/century_gothic"
                android:hint="@string/number_of_bed_s_in_each_room"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:text="4"
                android:theme="@style/MyEditText" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/Finish"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_green_btn"
            android:onClick="createDept"
            android:padding="18dp"
            android:text="@string/finish"
            android:textAllCaps="true"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="539dp"
            tools:layout_editor_absoluteY="318dp" />
    </LinearLayout>


</LinearLayout>