<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundedit"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/welcome_to_smartblanket"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/info_supervisor_subtitle"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="59dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:theme="@style/MyEditText"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/MyErrorText">

            <EditText
                android:id="@+id/regFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@null"
                android:fontFamily="@font/century_gothic"
                android:hint="@string/full_name"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text"
                android:theme="@style/MyEditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_user"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:theme="@style/MyEditText"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/MyErrorText">

            <EditText
                android:id="@+id/regUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/century_gothic"
                android:hint="@string/username"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text"
                android:theme="@style/MyEditText" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:theme="@style/MyEditText"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/MyErrorText"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/regPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/century_gothic"
                android:hint="@string/password"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword"
                android:theme="@style/MyEditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_re_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:theme="@style/MyEditText"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/MyErrorText"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/regRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/century_gothic"
                android:hint="@string/re_password"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword"
                android:theme="@style/MyEditText" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp">

        <Button
            android:id="@+id/regLoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:background="@drawable/rounded_blue_btn"
            android:onClick="BackButton"
            android:padding="18dp"
            android:text="@string/login_screen" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/regNextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="45dp"
            android:background="@drawable/rounded_green_btn"
            android:onClick="onClickRegister"
            android:padding="18dp"
            android:text="@string/next" />
    </LinearLayout>


</LinearLayout>