<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundedit"
    android:orientation="vertical"
    android:typeface="@font/app_font">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:text="Add Patient"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_ssn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:theme="@style/MyEditTextAdd"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/MyErrorText">

            <EditText
                android:id="@+id/SSN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/century_gothic"
                android:hint="@string/ssnPatient"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dirRoomNumber"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:fontFamily="@font/app_font"
                android:text="@string/dirRoomNumber" />

            <Spinner
                android:id="@+id/RoomNoSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/dirBedNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dirBedNumber" />

            <Spinner
                android:id="@+id/BedNoSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
android:id="@+id/layout_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditTextAdd"
            android:layout_marginRight="16dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/MyErrorText">

            <EditText
                android:id="@+id/FirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/century_gothic"
                android:hint="@string/firstNamePatient"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPersonName"
                android:nextFocusDown="@id/MiddleName"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditTextAdd"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/MyErrorText">

            <EditText
                android:id="@+id/MiddleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/century_gothic"
                android:hint="@string/middleNamePatient"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPersonName"
                android:nextFocusDown="@id/SureName"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditTextAdd"
            app:errorEnabled="true"
            android:layout_marginLeft="16dp"
            app:errorTextAppearance="@style/MyErrorText">

            <EditText
                android:id="@+id/SureName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/century_gothic"
                android:hint="@string/LastNamePatient"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <DatePicker
            android:id="@+id/DateOfBirth"
            android:layout_width="361dp"
            android:layout_height="135dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:fontFamily="@font/century_gothic"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditTextAdd"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/MyErrorText">

            <EditText
                android:id="@+id/State"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/century_gothic"
                android:hint="@string/statePatient"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/CancelBtn"
            android:layout_width="180dp"
            android:layout_height="65dp"
            android:background="@drawable/rounded_red_btn"
            android:bottomLeftRadius="10dp"
            android:bottomRightRadius="10dp"
            android:onClick="BackButton"
            android:text="@string/cancelBtn"
            android:textColor="@color/white"
            android:topLeftRadius="10dp"
            android:topRightRadius="10dp"
            tools:layout_editor_absoluteX="93dp"
            tools:layout_editor_absoluteY="328dp" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/ConfirmBtn"
            android:layout_width="180dp"
            android:layout_height="65dp"
            android:background="@drawable/rounded_green_btn"
            android:onClick="onClick"
            android:text="@string/confirmBtn"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="459dp"
            tools:layout_editor_absoluteY="328dp" />
    </LinearLayout>


</LinearLayout>