<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    tools:context=".MainActivity"
    android:background="@color/blueState">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_password_confirm"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        android:textSize="24sp" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:theme="@style/MyEditText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyErrorText"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edit_password_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/century_gothic"
            android:hint="@string/password"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword"
            android:theme="@style/MyEditText" />
    </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/confirmPasswordCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_green_btn"
            android:layout_marginTop="8dp"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:text="Confirm"/>
        <Button

            android:id="@+id/cancelPasswordCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_red_btn"
            android:layout_marginTop="16dp"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:text="@string/cancelBtn"/>

</LinearLayout>